# todo.ai

./: .gitignore  README.md
src/: index.html  main.js  mvp.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  todos.rs
